@@ -1,9 +1,13 @@
+2008-03-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/DataViews/GrampletView.py (GrampletView): 
+	turned GrampletView into a PersonNavView to get Forward/Next/Home
+
 2008.03.06 Jim Sack <jgsack@san.rr.com>
-	src/GrampsDbUtils/_WriteGedcom.py: #1849 gedcom output: omit 'Y'
+	* src/GrampsDbUtils/_WriteGedcom.py: #1849 gedcom output: omit 'Y'
 	when there is subpordinate data in event (person or family)
 
 2008.03.06 Jim Sack <jgsack@san.rr.com>
-	src/test/gedread_util.py: update test utility per r10169 changes that
+	* src/test/gedread_util.py: update test utility per r10169 changes that
 	removed the "TRANSACTIONS" option. 
 
 2008-03-06 Jason Simanek <jsimanek@gmail.com>
